--- a/fsl-imx8mq-var-dart-fpt-common.dtsi
+++ b/fsl-imx8mq-var-dart-fpt-common.dtsi
@@ -65,7 +65,7 @@
 			"IN1L", "Mic Jack",
 			"Playback", "CPU-Playback",
 			"CPU-Capture", "Capture";
-		status = "okay";
+		status = "disabled";
 	};
 
 	sound-hdmi {
@@ -102,6 +102,7 @@
 		status = "disabled";
 	};
 
+/*
 	backlight: backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm1 0 1000000 0>;
@@ -161,6 +162,7 @@
 			linux,default-trigger = "mmc0";
 		};
 	};
+*/
 };
 
 &clk {
@@ -251,6 +253,27 @@
 			fsl,pins = <
 				MX8MQ_IOMUXC_UART1_RXD_UART1_DCE_RX		0x49
 				MX8MQ_IOMUXC_UART1_TXD_UART1_DCE_TX		0x49
+				MX8MQ_IOMUXC_GPIO1_IO01_GPIO1_IO1          0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO03_GPIO1_IO3          0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO06_GPIO1_IO6          0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO10_GPIO1_IO10         0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO11_GPIO1_IO11         0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO12_GPIO1_IO12         0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO13_GPIO1_IO13         0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO14_GPIO1_IO14         0x00000016
+				MX8MQ_IOMUXC_GPIO1_IO15_GPIO1_IO15         0x00000016
+				MX8MQ_IOMUXC_SAI1_RXD4_GPIO4_IO6           0x00000016
+				MX8MQ_IOMUXC_SAI2_MCLK_GPIO4_IO27          0x00000016
+				MX8MQ_IOMUXC_SAI2_RXC_GPIO4_IO22           0x00000016
+				MX8MQ_IOMUXC_SAI2_RXD0_GPIO4_IO23          0x00000016
+				MX8MQ_IOMUXC_SAI2_RXFS_GPIO4_IO21          0x00000016
+				MX8MQ_IOMUXC_SAI2_TXC_GPIO4_IO25           0x00000016
+				MX8MQ_IOMUXC_SAI2_TXFS_GPIO4_IO24          0x00000016
+				MX8MQ_IOMUXC_SAI5_MCLK_GPIO3_IO25          0x00000016
+				MX8MQ_IOMUXC_SAI5_RXD0_GPIO3_IO21          0x00000016
+				MX8MQ_IOMUXC_SAI5_RXD2_GPIO3_IO23          0x00000016
+				MX8MQ_IOMUXC_SAI5_RXD3_GPIO3_IO24          0x00000016
+				MX8MQ_IOMUXC_SAI5_RXFS_GPIO3_IO19          0x00000016
 			>;
 		};
 
@@ -669,6 +692,7 @@
 	};
 };
 
+/* Real-time clock */
 &i2c2 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
@@ -741,8 +765,9 @@
 	};
 };
 
+/* LCD */
 &i2c3 {
-	clock-frequency = <100000>;
+	clock-frequency = <50000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3>;
 	status = "okay";
@@ -752,7 +777,7 @@
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c4>;
-	status = "okay";
+	status = "disabled";
 
 	ov5640_mipi2: ov5640_mipi2@3c {
 		status = "okay";
@@ -789,7 +814,7 @@
 	pinctrl-0 = <&pinctrl_pcie0>;
 	reset-gpio = <&gpio4 7 GPIO_ACTIVE_LOW>;
 	ext_osc = <1>;
-	status = "okay";
+	status = "disabled";
 };
 
 &pcie1 {
@@ -827,14 +852,14 @@
 	status = "okay";
 };
 
-/* Bluetooth */
+/* Bluetooth/Header */
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
 	assigned-clocks = <&clk IMX8MQ_CLK_UART4>;
 	assigned-clock-parents = <&clk IMX8MQ_SYS1_PLL_80M>;
 	fsl,uart-has-rtscts;
-	status = "disabled";
+	status = "okay";
 };
 
 /* eMMC */
@@ -881,7 +906,7 @@
 	assigned-clocks = <&clk IMX8MQ_CLK_SAI3>;
 	assigned-clock-parents = <&clk IMX8MQ_AUDIO_PLL1_OUT>;
 	assigned-clock-rates = <1536000>;
-	status = "okay";
+	status = "disabled";
 };
 
 &sai4 {
